--- a/packages/tyType/src/index.css
+++ b/packages/tyType/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  monospace;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+textarea {
+  height: 400px!important;
+  resize: none;
+}
+
+
+.dark-mode {
+  color: white;
+}
+
+.dark-mode textarea {
+  color: white;
+}
+
+.dark-mode button.button {
+  color: white;
+}
+
+.dark-mode li code {
+  background-color: #5c6166
 }
