style: 兼容模式修改

--- a/packages/jsMock/src/index.less
+++ b/packages/jsMock/src/index.less
@@ -41,14 +41,15 @@ textarea {
 }
 
 .win-dark-mode {
-    color: black;
+    background-color: #000;
+    color: white;
 
     textarea {
-        color: black;
+        color: white;
     }
 
     button.button {
-        color: black;
+        color: white;
     }
 
     li code {
